[project]
name = "weather_mcp"
version = "0.1.0"
description = "Weather forecast MCP service"
authors = [{name = "ChenZL", email = "chenzhenglong0514@163.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["uv"]
build-backend = "uv"
